<resources>
    <string name="home">Home</string>
    <string name="pay">Pay</string>
    <string name="order">Order</string>
    <string name="mypage">MyPage</string>

    <string name="app_name">애옹벅스</string>
    <string name="login">로그인</string>
    <string name="hello">안녕하세요.</string>
    <string name="aongbucks">애옹벅스입니다.</string>
    <string name="login_please">회원 서비스 이용을 위해 로그인 해주세요.</string>
    <string name="login_exits_empty">아이디와 비밀번호 모두 입력해주세요.</string>
    <string name="login_completed">로그인되었습니다.</string>
    <string name="logout">로그아웃</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="join">회원가입</string>
    <string name="welcome">환영합니다!</string>
    <string name="customer">고객님</string>
    <string name="enter_please">이름과 아이디, 비밀번호를 입력해주세요.</string>
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="join_exits_empty">이름과 이이디, 비밀번호 모두 입력해주세요.</string>
    <string name="join_failed">회원가입에 실패했습니다.</string>
    <string name="join_completed">회원가입이 완료되었습니다.\n로그인을 해주세요.</string>

    <string name="total_menu">전체 메뉴</string>

    <string name="add_cart">장바구니</string>
    <string name="add_cart_favorite">담기</string>

    <string name="rating">평점</string>
    <string name="comment_deleted">평점이 삭제되었습니다.</string>
    <string name="comment_empty">한줄평을 남겨주세요.</string>
    <string name="comment_updated">평점이 수정되었습니다.</string>
    <string name="no_comments">등록된 평점이 없습니다.</string>

    <string name="favorite_menu">나의 메뉴</string>
    <string name="no_menu">등록된 메뉴가 없습니다.</string>
    <string name="to_favorite_menu">좋아하는 메뉴에</string>
    <string name="press_heart">를 눌러 보세요.</string>
    <string name="favorite_added">나의 메뉴에 등록되었습니다.</string>
    <string name="favorite_deleted">나의 메뉴에서 삭제되었습니다.</string>

    <string name="hello_sir">%s님 안녕하세요!</string>
    <string name="order_history">주문내역</string>
    <string name="order_else">%s 외 %d건</string>
    <string name="membership">멤버십</string>
    <string name="show_membership_benefit">혜택 보기</string>
    <string name="to_next_grade">잔 추가 주문 시</string>
    <string name="achieve">달성</string>
    <string name="offer_discount">등급에 따라 할인 서비스를 제공해옹</string>
    <string name="benefit">혜택</string>
    <string name="first_grade_standard">신규 가입</string>
    <string name="each_grade_standard">%d잔 주문</string>
    <string name="each_grade_benefit">%.0f\%% 할인</string>

    <string name="order_detail">주문상세</string>
    <string name="order_total_price">총 주문금액 :</string>
    <string name="order_date">주문일시 :</string>

</resources>