<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding_size"
    tools:context=".fragment.LoginFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top_size"
        android:paddingLeft="@dimen/title_margin_left_size"
        android:text="@string/login"
        android:textSize="@dimen/text_title_large_size"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/login_logo_size"
        android:layout_height="@dimen/login_logo_size"
        android:layout_marginTop="@dimen/margin_size_50"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_20"
        android:fontFamily="@font/santana"
        android:text="@string/hello"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_10"
        android:text="@string/aongbucks"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_10"
        android:text="@string/login_please" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_50"
        android:text="@string/id"
        android:textColor="@color/black"
        android:visibility="invisible" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="text"
            android:textSize="@dimen/text_default_size"
            android:hint="@string/id"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:text="@string/password"
        android:textColor="@color/black"
        android:visibility="invisible" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleDrawable="@drawable/password_toggle_selector"
        app:passwordToggleTint="@color/light_blue"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="@dimen/text_default_size"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_regular"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/joinBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_outlined"
            android:fontFamily="@font/santana_bold"
            android:text="@string/join"
            android:textColor="@color/accent_green" />
    </LinearLayout>

</LinearLayout>