<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.ssafy.aongbucks_user.model.dto.User" />
        <variable
            name="grade"
            type="com.ssafy.aongbucks_user.model.dto.Grade" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding_size">


        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/title_margin_left_size"
            android:layout_marginTop="@dimen/title_margin_top_size"
            android:text="@string/mypage"
            android:textSize="@dimen/text_title_large_size" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_40">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/hello_sir(user.name), default=name}"
                android:textSize="@dimen/text_default_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_outlined"
                android:text="@string/logout"
                android:textColor="@color/accent_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_10"
            android:layout_marginTop="@dimen/margin_size_30"
            android:layout_marginRight="@dimen/margin_size_10"
            android:layout_marginBottom="@dimen/margin_size_10"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/cardview_elevation_size">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/padding_size_20"
                android:paddingTop="@dimen/margin_size_10"
                android:paddingRight="@dimen/padding_size_20"
                android:paddingBottom="@dimen/margin_size_10">

                <ImageView
                    android:id="@+id/imageView2"
                    app:gradeImage="@{grade.img}"
                    android:layout_width="@dimen/mypage_grade_img_size"
                    android:layout_height="@dimen/mypage_grade_img_size"
                    android:layout_marginTop="@dimen/margin_size_10"
                    android:layout_marginBottom="@dimen/margin_size_10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_size_10"
                    android:text="@{grade.title, default=grade}"
                    android:textSize="@dimen/text_default_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/membershipBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/show_membership_benefit"
                    android:textColor="@color/medium_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_30"
            android:text="@string/order_history"
            android:textSize="@dimen/text_title_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/orderRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_size_16" />

    </LinearLayout>
</layout>